--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,11 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -Djavax.net.ssl.trustStore=truststore.jks -Djavax.net.ssl.trustStorePassword=changeit -Djavax.net.ssl.trustStoreType=JKS -Djdk.tls.client.protocols=TLSv1.2,TLSv1.3 -Dsun.security.ssl.allowUnsafeRenegotiation=true
+#
+# NOTE:
+# Do NOT force a custom trustStore unless the file exists and contains the required CAs.
+# A missing/empty trustStore breaks HTTPS dependency downloads (PKIX errors).
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -Djdk.tls.client.protocols=TLSv1.2,TLSv1.3
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
